# Django-Assginment

TODO/: db.sqlite3  pyproject.toml
TODO/config/: settings.py  urls.py
TODO/templates/todo/: base.html  todo_info.html  todo_list.html
TODO/todo/: models.py  views.py
TODO/todo/migrations/: 0001_initial.py  0003_todo_user_alter_todo_end_date.py
TODO/users/: models.py  views.py
TODO/users/migrations/: 0001_initial.py
chapter_02/: db.sqlite3  pyproject.toml
chapter_02/config/: settings.py  urls.py
chapter_02/templates/registration/: login.html
chapter_02/todo/: models.py  views.py
chapter_02/todo/migrations/: 0002_remove_todo_modified_at_todo_end_date_and_more.py
